style: change color palette and fix alignment

--- a/style.css
+++ b/style.css
@@ -35,35 +35,50 @@ img {
   height: auto;
 }
 body {
-  background-color: #5f86a5;
+  background-color: #084a6a;
 }
 /* header */
 nav {
-  background-color: #084a6a;
+  background-color: #5f86a5;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 60px;
 }
 .title {
-  color: #e89b25;
+  color: #f1f1e6;
   margin: 0 auto;
 }
 
 /* main */
 main {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
+  justify-content: center;
+  margin-block-start: 100px;
 }
 /*   selection  */
 .selection {
   display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 .btn {
   width: 200px;
   background: transparent;
   border: none;
   cursor: pointer;
+  transition: all 0.2s;
 }
-
+.btn:hover {
+  transform: scale(1.1);
+  border: 2px solid #e89b25;
+}
+.btn:active {
+  background-color: blanchedalmond;
+}
 /*  display  */
 .display {
   display: flex;
@@ -72,9 +87,11 @@ main {
 }
 .points {
   width: 300px;
-  height: 200px;
+  height: auto;
   background-color: #f1f1e6;
+  padding: 10px;
 }
+
 /*  modal */
 .hidden {
   display: none;
